--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ table {
    margin: auto;
    border-collapse: collapse;
    background-color: #f3f3f3;
-   font-size: 18px;
+   font-size: 16px;
 
    font-family: Arial, Helvetica, sans-serif;
    text-align: center;
@@ -31,7 +31,7 @@ thead > tr th {
 }
 
 thead > tr th:first-child {
-   width:24%;
+   width: 24%;
    background-color: rgb(121, 135, 172);
    border-top-left-radius: 10%;
 }
@@ -57,9 +57,13 @@ tfoot > tr td:last-child {
 }
 tbody > tr td {
    font-size: 0.9em;
-   padding: 10px;
+   padding: 15px;
 }
 
+tbody > tr > td:first-child {
+   text-align-last: left;
+   padding-left: 30px;
+}
 tbody tr:nth-child(even) > td:nth-child(odd) {
    background-color: #ececec;
 }
@@ -85,4 +89,3 @@ button {
    margin: 15px;
    text-transform: uppercase;
 }
-
